Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 
 Das Jahr 1989 sieht den Aufstieg des Computer-Virtuosen Kevin Flynn (Jeff Bridges) zum Großunternehmer – und sein plötzliches Verschwinden. Lange Jahre glaubt sein inzwischen erwachsen gewordener Sohn Sam (Garrett Hedlund), der alter Herr hätte sich aus dem Staub gemacht. Doch eines Tages lernt er die erstaunliche Wahrheit: Flynn sitzt seit einem Vierteljahrhundert in seiner eigenen Computer-Welt TRON fest – als Gefangener seines Spiegelbildes CLU (digital verjüngt: Jeff Bridges), einer KI, die mit tyrannischer Härte über die virtuellen Weiten des Rasters herrscht. Um CLUs Pläne zu durchkreuzen, muss sich Sam mit seinem Vater versöhnen und die reizend-naive Cyber-Dame Quorra (Olivia Wilde) beschützen. Denn die trägt ein Geheimnis in sich, das den Lauf beider Welten für immer verändern könnte...
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/green.mp4">
+<img src="https://123.vitaforas.de/green.png" alt="26" width="100%" height="auto"></a>
+
+
+Nach dem Tod seines alten Herren trifft Zeitungsverleger-Erbe und Playboy Britt Reid (Seth Rogen) auf dessen Assistenten Kato (Jay Chou). Der stoische Kerl ist flink wie ein Ninja und hat eine Reihe ganz besonderer Fähigkeiten auf Lager. Das macht sich Britt zu Nutzen – fortan ziehen die beiden als maskiertes Duo in den Kampf gegen das organisierte Verbrechen. Dabei inszenieren sie sich keineswegs als Helden, sondern amüsieren sich prächtig über ihren miesen Ruf und den Ärger mit der Polizei. Gefährlicher wird ihnen da schon Benjamin Chudnofsky (Christoph Waltz), seines Zeichens paranoider und ausgesprochen gewaltbereiter Gangsterkönig...
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/land.mp4">
