Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,13 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 Das Jahr 1989 sieht den Aufstieg des Computer-Virtuosen Kevin Flynn (Jeff Bridges) zum Großunternehmer – und sein plötzliches Verschwinden. Lange Jahre glaubt sein inzwischen erwachsen gewordener Sohn Sam (Garrett Hedlund), der alter Herr hätte sich aus dem Staub gemacht. Doch eines Tages lernt er die erstaunliche Wahrheit: Flynn sitzt seit einem Vierteljahrhundert in seiner eigenen Computer-Welt TRON fest – als Gefangener seines Spiegelbildes CLU (digital verjüngt: Jeff Bridges), einer KI, die mit tyrannischer Härte über die virtuellen Weiten des Rasters herrscht. Um CLUs Pläne zu durchkreuzen, muss sich Sam mit seinem Vater versöhnen und die reizend-naive Cyber-Dame Quorra (Olivia Wilde) beschützen. Denn die trägt ein Geheimnis in sich, das den Lauf beider Welten für immer verändern könnte...
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/echo.mp4">
+<img src="https://123.vitaforas.de/echo.png" alt="26" width="100%" height="auto"></a>
 
+
+Die gehörlose Maya Lopez (Alaqua Cox) ist dafür bekannt, stets tough zu sein zu, doch in ihrem Inneren sieht es ganz anders aus. Noch immer hat sie mit den Nachwirkungen ihres Rachefeldzugs gegen den brutalen Verbrechensbekämpfer Ronin (Jeremy Renner) zu kämpfen, bei welchem sie in New York für gehörig Chaos gesorgt hat. Die seelischen Wunden sitzen tief, denn der emotionale Ballast ihrer Vergangenheit lastet schwer auf ihren Schultern. Als Bandenchefin und Nachfolgerin von Wilson Fisk alias Kingpin muss sie sich für ihre rücksichtslosen Taten verantworten und alles dafür geben, sich den Schatten ihrer Vergangenheit zu stellen. Noch immer ringt sie mit ihrem kulturellen Erbe als amerikanische Ureinwohnerin, obwohl sie mehr denn je darauf angewiesen wäre, ihre inneren Dämonen endlich abzuschütteln. Noch ahnt sie nicht, dass noch viel größere Probleme auf sie zukommen werden …
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/green.mp4">
