Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,12 @@ Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen verm
 
 Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blut ein mögliches Heilmittel gegen die weltweit grassierende Untoten-Epidemie tragen könnte. 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/braut.mp4">
+<img src="https://123.vitaforas.de/braut.jpg" alt="26" width="100%" height="auto"></a>
+
+Eben schäumte der junge Mann (Ser'Darius Blain) noch vor Vorfreude auf seine für den nächsten Morgen geplante Hochzeit über. Da meldet sich seine Braut (Natalie Burn) bei ihm und erklärt kurzerhand, dass sie es sich anders überlegt habe. Natürlich ist der Bräutigam am Boden zerstört und will diese Entscheidung nicht akzeptieren. Also schickt er seine Trauzeugen (u. a. Pancho Moler, Orlando Jones, Neb Chupin) los, seine Liebste zu suchen und umzustimmen. Allerdings nehmen die Herren diesen Freundschaftsdienst offenbar etwas zu ernst. Besonders einer von ihnen (Cam Gigandet) geht viel zu weit, als er die Frau nach einer langen Odyssee endlich findet. Sie will sich nämlich auf keinen Fall überreden lassen, doch noch vor den Altar zu treten. Da brennen bei dem Kerl die Sicherungen durch. Aus Rache dafür, dass sie seinen Kumpel gedemütigt hat, soll sie nun sterben ...
 
  <p>         
 </p>
