Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ Basierend auf wahren Begebenheiten:
  <a href="https://123.vitaforas.de/stalker.mp4">
 <img src="https://123.vitaforas.de/stalker.jpg" alt="26" width="100%" height="auto"></a>
 
+Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horrorfilms kehrt die junge Schauspielerin Rose Hepburn (Sophie Skelton) in ihr heute Nacht wie leergefegtes Hotel zurück. Weil der reguläre Lift defekt ist, ist sie gezwungen, den alten Lastenaufzug zu benutzen, der dann auch prompt vor dem zwölften Stockwerk steckenbleibt. Mit Rose in der Falle sitzt ein sich etwas seltsam nervös verhaltender Fremder (Stuart Brennan). Niemand hört ihre Hilfeschreie und der Notrufknopf scheint ebenfalls nicht zu funktionieren. Handyempfang haben die zwei ebenfalls nicht und so steigt die Anspannung. Bald muss Rose herausfinden, dass es sich bei dem mit ihr eingeschlossenen Mann um einen Mitarbeiter des für ihren aktuellen Film verantwortlichen Studios handelt und dass er obendrein von ihr besessen scheint. Natürlich schwant ihr Böses und sie befürchtet, dass er diese Situation bewusst herbeigeführt haben könnte. Doch während der Aufzug in bedrohlicher Höhe hängt und jeden Moment in die Tiefe zu stürzen droht, kommen bald noch ganz andere Wahrheiten ans Licht …
 <p>         
 </p>   
   <a href="https://tv.vitaforas.de/moon.mp4">
