Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                                        </p>
 
 
-<img src="https://tv.vitaforas.de/white.png"> <p>
+<img src="https://123.vitaforas.de/white.png"> <p>
 Klick Hier</p>
 <img src="unten.png">
 
@@ -100,8 +100,8 @@ Klick Hier</p>
 
 Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 <ul>
-<li><a href="https://tv.vitaforas.de/bee.mp4">
-<img src="https://tv.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
+<li><a href="https://123.vitaforas.de/bee.mp4">
+<img src="https://123.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
  
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
