Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
                                 <!-- Footer -->
                                         <footer id="footer">
-                                                <p class="copyright">&copy; vitaforas <a href="https://vitaforas.github.io/HTML5/#about">Impressum</a> </p>
+                                                <p class="copyright">&copy; Stream.📺 <a href="https://#about">Impressum</a> </p>
                                         </footer>
 
                         </div>
