Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@ In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stel
 TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fußsoldaten zu rächen.  Um den verantwortlichen Bösewicht aufzuspüren, wagt sich TATE über seine Komfortzone Essex hinaus in die dunkle Seite des Soho der 90er Jahre.  Er tritt gegen gewalttätige Bosse an und kämpft sich mit schierer brutaler Gewalt durch tückische Seitenstraßen.  TATE ist auf der Suche nach Rache und schreckt vor nichts zurück, selbst als die Welt um ihn herum zu explodieren beginnt.
 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/battleship.mp4">
+<img src="https://123.vitaforas.de/battleship.jpg" alt="26" width="100%" height="auto"></a>
 
+Ein internationaler Flottenverband aus fünf Kriegsschiffen führt gerade eine Übung im pazifischen Ozean durch. Admiral Shane erblickt während eines Manövers ein metallenes Gebilde, das sich bei näherer Betrachtung als außerirdisches Raumschiff entpuppt, das aus dem Wasser ragt. Die Militärs reagieren mit großer Neugier auf das unbekannte Objekt. Als sich die ersten Offiziere dem gewaltigen Raumschiff nähern, erwecken sie es zum Leben. Admiral Shane und sein Schwiegersohn in spe, Alex Hopper, gehen auf Angriffskurs und stellen sich den ungebetenen Gästen in die Quere. Doch die entfesselte Seeschlacht ist nur der Anfang. Denn die Aliens, "Regents" genannt, wollen eine gewaltige Energiequelle auf dem Meer errichten - und die Menschheit scheint ihnen dabei im Weg zu stehen...
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/mission.mp4">
