Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,13 @@ Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wi
 
 Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen vermeintlich dazu gebracht hat, ihr Leben wieder wertzuschätzen, hat John Kramer (Tobin Bell) wegen seiner schweren Krebserkrankung selbst nur noch wenige Monate zu leben. Doch schöpft er neue Hoffnung, als er von einer experimentellen Wunderbehandlung mit großen Erfolgschancen hört. Er macht sich auf den Weg nach Mexiko, um dort in einer Untergrundklinik den entsprechenden Eingriff durchführen zu lassen – fällt allerdings einem perfiden Betrug zum Opfer. Die Betreiber der Klinik machen verzweifelten Menschen falsche Versprechungen, um ihnen so das Geld aus der Tasche zu ziehen. Doch haben sie die Rechnung ohne Jigsaw gemacht! Kramer will die Betrüger zur Rechenschaft ziehen und denkt sich einmal mehr sadistische Todesapparaturen aus, mit denen die Scharlatane gequält werden sollen...
 
+ <p>         
+</p>        
+
+ <a href="https://123.vitaforas.de/ghostland.mp4">
+<img src="https://123.vitaforas.de/ghostland.jpg" alt="15" width="100%" height="auto"></a>
+
+In der heruntergekommenen Grenzstadt Samurai Town wird der Bankräuber Hero (Nicolas Cage) vom wohlhabenden Gouverneur (Bill Moseley) aus dem Gefängnis geholt, weil dessen Adoptiv-Enkelin Bernice (Sofia Boutella) verschwunden ist. Der Gouverneur bietet dem Gefangenen seine Freiheit an, wenn er die Ausreißerin wiederfindet. In einen Lederanzug gekleidet, der mit zahlreichen Sprengsätzen ausgestattet ist, damit der Retter nicht auf falsche Gedanken kommt, und sich innerhalb von fünf Tagen selbst zerstört, macht sich der Namenlose auf die Suche nach der jungen Frau, in das sogenannte Ghostland, eine postapokalyptische Einöde, die das Samurai Town umgibt. Tatsächlich findet der Held Bernice schnell, doch kann er mit ihr entkommen, bevor ihn die Bewohner des Ghostland schnappen oder er in die Luft gejagt wird?
 <p>        
 </p>
 
