--- a/index.html
+++ b/index.html
@@ -1223,8 +1223,8 @@ Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen verm
  <p>         
 </p>        
 
- <a href="https://123.vitaforas.de/ghostland.mp4">
-<img src="https://123.vitaforas.de/ghostland.jpg" alt="15" width="100%" height="auto"></a>
+ <a href="https://zero.vitaforas.de/ghost.mp4">
+<img src="https://123.vitaforas.de/ghost.jpg" alt="15" width="100%" height="auto"></a>
 
 In der heruntergekommenen Grenzstadt Samurai Town wird der Bankräuber Hero (Nicolas Cage) vom wohlhabenden Gouverneur (Bill Moseley) aus dem Gefängnis geholt, weil dessen Adoptiv-Enkelin Bernice (Sofia Boutella) verschwunden ist. Der Gouverneur bietet dem Gefangenen seine Freiheit an, wenn er die Ausreißerin wiederfindet. In einen Lederanzug gekleidet, der mit zahlreichen Sprengsätzen ausgestattet ist, damit der Retter nicht auf falsche Gedanken kommt, und sich innerhalb von fünf Tagen selbst zerstört, macht sich der Namenlose auf die Suche nach der jungen Frau, in das sogenannte Ghostland, eine postapokalyptische Einöde, die das Samurai Town umgibt. Tatsächlich findet der Held Bernice schnell, doch kann er mit ihr entkommen, bevor ihn die Bewohner des Ghostland schnappen oder er in die Luft gejagt wird?
 <p>        
