Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fu
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/battleship.mp4">
-<img src="https://123.vitaforas.de/battleship.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/ship.png" alt="26" width="100%" height="auto"></a>
 
 Ein internationaler Flottenverband aus fünf Kriegsschiffen führt gerade eine Übung im pazifischen Ozean durch. Admiral Shane erblickt während eines Manövers ein metallenes Gebilde, das sich bei näherer Betrachtung als außerirdisches Raumschiff entpuppt, das aus dem Wasser ragt. Die Militärs reagieren mit großer Neugier auf das unbekannte Objekt. Als sich die ersten Offiziere dem gewaltigen Raumschiff nähern, erwecken sie es zum Leben. Admiral Shane und sein Schwiegersohn in spe, Alex Hopper, gehen auf Angriffskurs und stellen sich den ungebetenen Gästen in die Quere. Doch die entfesselte Seeschlacht ist nur der Anfang. Denn die Aliens, "Regents" genannt, wollen eine gewaltige Energiequelle auf dem Meer errichten - und die Menschheit scheint ihnen dabei im Weg zu stehen...
 <p>         
@@ -1224,7 +1224,7 @@ Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen verm
 </p>        
 
  <a href="https://zero.vitaforas.de/ghost.mp4">
-<img src="https://123.vitaforas.de/ghost.jpg" alt="15" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/ghostland.jpg" alt="15" width="100%" height="auto"></a>
 
 In der heruntergekommenen Grenzstadt Samurai Town wird der Bankräuber Hero (Nicolas Cage) vom wohlhabenden Gouverneur (Bill Moseley) aus dem Gefängnis geholt, weil dessen Adoptiv-Enkelin Bernice (Sofia Boutella) verschwunden ist. Der Gouverneur bietet dem Gefangenen seine Freiheit an, wenn er die Ausreißerin wiederfindet. In einen Lederanzug gekleidet, der mit zahlreichen Sprengsätzen ausgestattet ist, damit der Retter nicht auf falsche Gedanken kommt, und sich innerhalb von fünf Tagen selbst zerstört, macht sich der Namenlose auf die Suche nach der jungen Frau, in das sogenannte Ghostland, eine postapokalyptische Einöde, die das Samurai Town umgibt. Tatsächlich findet der Held Bernice schnell, doch kann er mit ihr entkommen, bevor ihn die Bewohner des Ghostland schnappen oder er in die Luft gejagt wird?
 <p>        
