--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,22 @@ Patrice Capullo (Uma Thurman) hat ein Problem: Ihre Kunstgalerie wirft kein Geld
 
 Tommy Olson (RJ Mitte) ist ein Jurastudent, der mit einigen körperlichen und mentalen Beeinträchtigungen zu kämpfen hat. Nebenbei versucht er sich irgendwie vom erdrückenden Einfluss seines Vaters, des mächtigen Anwalts Dan Olson (William Mark McCullough), zu lösen. Auch der Rest der Familie – Tommys Mutter (Sue Cremin) sowie seine Schwestern (Ava Bianchi, Jennifer A. Goodman) – lebt in Angst und Schrecken vor Dan. Dann geschieht eine Reihe von Morden in der Umgebung. Wer steckt dahinter und wo liegt das Motiv für die Gräueltaten? Tommy freut sich derweil, von einer Anwaltskanzlei angestellt zu werden, die offenbar nicht nach der Pfeife seines Dads tanzt. Da er bis zum Bestehen seiner Prüfung nicht als vollwertiger Jurist arbeiten darf, lässt seine neue Chefin (Candice Rose) ihn Nachforschungen über ungeklärte Fälle anstellen. Hilfe erhält er dabei von seiner Kollegin Olivia (Kimberly Michelle Vaughn). Kurioserweise scheinen diese Fälle alle miteinander sowie mit dem Tod einer Highschool-Schülerin namens Milly (Rebekah Kennedy) verbunden zu sein …
 
-        
+
+<p>
+</p>
+  <a href="https://123.vitaforas.de/sex.mp4">
+<img src="https://123.vitaforas.de/sex.jpg" alt="33" width="100%" height="auto"></a>
+
+Um den Abschluss der Highschool zu feiern, machen Tara (Mia McKenna-Bruce), Skye (Lara Peake) und Em (Eva Lewis) ihren ersten Urlaub mit ihren Freundinnen in einem beliebten Ferienort am Mittelmeer. Das Trio plant, mit ihren englischen Mitbewohnern, die sie bei ihrer Ankunft kennengelernt haben, eine Party nach der anderen zu feiern, sich zu betrinken und die Nächte durchzumachen. Für die junge Tara ist diese Reise der Exzesse wie ein elektrisierendes erstes Mal – bis ihr schwindelig wird. Ist sie angesichts der kollektiven Euphorie wirklich frei, jede sich ihr bietende Erfahrung anzunehmen oder abzulehnen?
+
+
+
+<p>
+</p>
+  <a href="https://123.vitaforas.de/rain.mp4">
+<img src="https://123.vitaforas.de/rain.jpg" alt="33" width="100%" height="auto"></a>
+
+    Um ihre Ausbildung zu finanzieren, betreibt Krankenschwesternschülerin Jenna (Dare Taylor) unter dem Pseudonym „Rain“ einen Online-Videokanal für Erwachsene, auf dem sie für Geld strippt und noch manch andere Dinge vor der Kamera tut. Als der Vermieter ihrer Wohnung sie deshalb rauswirft, droht Jennas Alltag aus den Fugen zu geraten. Durch Zufall stößt sie dann allerdings auf ein Inserat von Blake (Willow Grey), die eine Mitbewohnerin sucht. Wie sich herausstellt, verbirgt sich hinter der Adresse eine riesige Villa in Strandnähe. Blake versichert Jenna, dass die Miete tatsächlich so gering sei, wie es in der Anzeige steht. Zudem hätte sie auch kein Problem damit, dass Jenna weiterhin webcamt. Während sie dann am Abend ihre erste Online-Session in der neuen Bleibe durchführen will, bietet Blake plötzlich an, unter dem Namen Claudia mitzumischen. Der Stream wird ziemlich sexy und ein riesiger Erfolg, mit dem Jenna auf einen Schlag ein paar Tausender verdient. Schon bald beginnt Jenna, die auf diese Art zum ersten Mal mit einer Frau intim war, Gefühle für Blake zu entwickeln. Die zeigt sich ebenfalls nicht abgeneigt, hat dabei aber auch verborgene Motive …    
  <p>         
 </p>
 
