Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 Das Jahr 1989 sieht den Aufstieg des Computer-Virtuosen Kevin Flynn (Jeff Bridges) zum Großunternehmer – und sein plötzliches Verschwinden. Lange Jahre glaubt sein inzwischen erwachsen gewordener Sohn Sam (Garrett Hedlund), der alter Herr hätte sich aus dem Staub gemacht. Doch eines Tages lernt er die erstaunliche Wahrheit: Flynn sitzt seit einem Vierteljahrhundert in seiner eigenen Computer-Welt TRON fest – als Gefangener seines Spiegelbildes CLU (digital verjüngt: Jeff Bridges), einer KI, die mit tyrannischer Härte über die virtuellen Weiten des Rasters herrscht. Um CLUs Pläne zu durchkreuzen, muss sich Sam mit seinem Vater versöhnen und die reizend-naive Cyber-Dame Quorra (Olivia Wilde) beschützen. Denn die trägt ein Geheimnis in sich, das den Lauf beider Welten für immer verändern könnte...
 
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/unruh.mp4">
+<img src="https://123.vitaforas.de/unruh.jpg" alt="26" width="100%" height="auto"></a>
+
+
+Ein Tal in der Nordwestschweiz, 1872: Josephine (Clara Gostynski) arbeitet in einer Uhrenfabrik, wo sie die Achse der Unruhe herstellt, ein winziges Stück, das den Schwung in der Mitte der mechanischen Uhr verursacht. Da sie Schwierigkeiten hat, ihre Gemeindesteuern zu bezahlen, wird sie bald unzufrieden mit der Organisation von Arbeit und Besitz im Dorf und in der Fabrik und schließt sich der anarchistischen Arbeiterbewegung der örtlichen Uhrmacher, der Fédération Jurassienne, an. Dort lernt sie Piotr Kropotkin (Alexei Evstratov) kennen, einen schwermütigen russischen Reisenden. Ihre Begegnung fällt in eine Zeit, in der die Zeitmessung, die Fotografie und der Telegraf die soziale Ordnung verändern und anarchistische Erzählungen mit einem aufkommenden Nationalismus konkurrieren. Bei einem Waldspaziergang fragen sich Josephine und Piotr: Sind Zeit, Geld und Staat nicht alles nur Fiktionen?
+
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/echo.mp4">
