Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -212,8 +212,14 @@ Die Grafschaft Donegal bekam einst von ihren eigenen Politikern den Beinamen „
  <p>         
 </p>         
 
+ <a href="https://123.vitaforas.de/germany.mp4">
+<img src="https://123.vitaforas.de/germany.jpg" alt="26" width="100%" height="auto"></a>
 
+
+Wilde Partys, heiße Flirts und jede Menge Hangovers: Acht Reality-Sternchen erleben auf Kreta den Sommer ihres Lebens. Wer erkämpft sich einen festen Platz in der Luxusvilla?
   
+<p>         
+</p>         
  <a href="https://123.vitaforas.de/fearless.mp4">
 <img src="https://123.vitaforas.de/fearless.png" alt="26" width="100%" height="auto"></a>
 
