Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@ TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fu
 
 Für die drei Pfadfinder Ben, Carter und Augie ist ein ganz besonderer Tag gekommen: Endlich steht ihnen das letzte Zeltlager bevor. In der verwaisten Stadt, in der sie Halt machen, sind sie zum Überleben schon bald auf die Erfahrungen angewiesen, die sie sich über Jahre gesammelt haben. Denn während sich das Trio zunächst freut, vor Ort erstmals einen Fuß in einen Stripclub zu setzen, müssen sie nur kurze Zeit später feststellen, dass die Schönheit auf der Bühne zu einem nach Fleisch lüsternen Zombie mutiert ist. Die Freunde müssen nun all ihre Fähigkeiten abrufen, um die Welt vor einer Bedrohung zu retten, für die noch kein Pfadfinder-Abzeichen erfunden wurde. Die fleißigen Scouts setzen alles daran, die fleischfressenden Untoten abzuwehren und ihrem Ruf als Helfer in der Not gerecht zu werden. Unterstützung bekommen sie durch die Cocktail-Mixerin Denise. Die kann nicht nur mit dem Shaker umgehen, sondern auch mit Waffen…
 
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/stowaway.mp4">
+<img src="https://123.vitaforas.de/stowaway.jpg" alt="26" width="100%" height="auto"></a>
+
+
+Drei Astronauten starten zur 42. Mission auf den Mars, in zwei Jahren sollen sie zurück sein. Zur Crew von Captain Marina Barnett gehören die Medizinerin Zoe und der Biologe David. Wenige Stunden nach dem Start entdecken sie einen unfreiwilligen blinden Passagier, Michael. Eine Rückkehr zur Erde ist ausgeschlossen und schon bald stellt sich heraus, dass durch einen irreparablen Defekt am Versorgungssystem der Sauerstoff nicht für alle Passagiere ausreichen wird. Zehn Tage bleiben der Crew, um eine Entscheidung zu treffen.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/battleship.mp4">
