Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/panderverse.mp4">
+ <a href="https://123.vitaforas.de/pandaverse.mp4">
 <img src="https://123.vitaforas.de/panderverse.jpg" alt="26" width="100%" height="auto"></a>
 
 Das Ende des vertrauten und geliebten Lebens von Cartman wird durch seine unglaublich beunruhigenden Träume vorhergesagt. Während die Ankunft der künstlichen Intelligenz ihre Gesellschaft umkrempelt, kämpfen auch die Erwachsenen in South Park mit ihren eigenen Entscheidungen.
