Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -240,7 +240,12 @@ Die Grafschaft Donegal bekam einst von ihren eigenen Politikern den Beinamen „
 
 Wilde Partys, heiße Flirts und jede Menge Hangovers: Acht Reality-Sternchen erleben auf Kreta den Sommer ihres Lebens. Wer erkämpft sich einen festen Platz in der Luxusvilla?
   
+<p>         
+</p>         
+ <a href="https://123.vitaforas.de/watney.mp4">
+<img src="https://123.vitaforas.de/watney.jpg" alt="26" width="100%" height="auto"></a>
 
+Die NASA treibt mit der „Ares 3“-Mission die Erforschung des Mars voran. Die Astronauten Mark Watney, Commander Lewis, Rick Martinez, Chris Beck, Alex Vogel und Beth Johanssen sind auf dem roten Planeten gelandet, inklusive eines Fahrzeugs und eines Habitats, in dem die Forscher leben und Nahrung herstellen können. Doch ein Sandsturm droht die mitgebrachte Technik samt ihrer Einwohner hinwegzufegen, so dass Commander Lewis den Befehl zum sofortigen Aufbruch gibt. Weil ihn seine Crew für tot hält, bleibt der Botaniker Mark Watney auf dem unwirtlichen fremden Planeten zurück. Mit beschädigter Ausrüstung versucht er, die wenigen ihm zur Verfügung stehenden Mittel so einfallsreich wie möglich zu nutzen. Und tatsächlich gelingt es Watney, der Erde zu signalisieren, dass er noch lebt. Die NASA unter Direktor Sanders beginnt, die Rettung des „Marsianers“ zu planen. Parallel dazu startet Watneys Crew eine eigene, riskante Mission, ihn heimzuholen …
 <p>         
 </p>         
  <a href="https://123.vitaforas.de/leon.mp4">
