Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@ Die NASA treibt mit der „Ares 3“-Mission die Erforschung des Mars voran. Die
 
 
 Die 12-jährige Mathilda wächst nicht gerade in den besten Verhältnissen auf: Ihre Mutter arbeitet als Prostituierte, ihr Vater versteckt Drogen für den korrupten Polizisten Norman Stansfield. Als sich dieser eines Tages betrogen fühlt, richtet er kurzerhand die ganze Familie hin und nur Mathilda entgeht dem Massaker knapp. Verzweifelt bittet sie ihren wenig gesprächigen Nachbarn Léon um Hilfe, der sie nur widerwillig in die Wohnung lässt. Schon kurze Zeit später stellt sie fest, dass er sein Geld als Profikiller verdient. Sie beschließt ebenfalls Cleaner zu werden, um den Mord an ihrer Familie zu rächen...
+
+<p>         
+</p>         
+ <a href="https://123.vitaforas.de/gravity.mp4">
+<img src="https://123.vitaforas.de/gravity.jpg" alt="26" width="100%" height="auto"></a>
+
+
+Die brillante Bio-Medizinerin Dr. Ryan Stone geht auf ihre erste Weltraum-Mission. An ihrer Seite ist der Astronaut Matt Kowalski, ein Veteran auf seinem letzten Trip ins All vor dem Ruhestand. Doch ein Routineausflug der beiden Astronauten außerhalb der Raumkapsel endet im Desaster. Das Shuttle wird zerstört, Ryan und Matt befinden sich plötzlich ganz alleine in den dunklen Tiefen des Weltraums - um sie herum nur Stille. Die Raumfahrer haben jeglichen Kontakt zur Erde verloren und es gibt keine Aussicht auf eine Rettung, während ein Verbindungsband wenigstens verhindert, dass sich die beiden auch noch gegenseitig verlieren. Jeder Atemzug frisst etwas mehr von dem wenigen Sauerstoff, den sie noch haben, und schließlich wird Angst zu Panik und dann zu tiefer, hoffnungsloser Verzweiflung.
 <p>         
 </p>         
  <a href="https://123.vitaforas.de/fearless.mp4">
