Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@ TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fu
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/rubikon.mp4">
+<img src="https://123.vitaforas.de/rubikon.jpg" alt="26" width="100%" height="auto"></a>
+
+Wir schreiben das Jahr 2056: Die Erde liegt in ihren letzten Zügen. Sauerstoffkuppeln schützen die, die es sich leisten können vor der giftigen Atmosphäre. Zwei Astronauten – Commander Hannah Wagner (Julia Franz Richter) und Dr. Gavin Abbott (George Blagden), beide Angestellte der Nibra Corporation – treffen neu auf der Raumstation Rubikon ein. Sie ersetzen einen Teil der Crew und sollen Reparaturen an der Außenhülle vornehmen, während der Biologe Dr. Dimitri Krylow (Mark Ivanir) weiter an Bord bei seinem Algen-Experiment bleibt. Kaum hat sich das Duo etwas eingelebt, sehen sie, wie sich unten auf der Erde eine Katastrophe ereignet: Ein brauner, offenbar giftiger Nebel beginnt, den kompletten Planeten einzuhüllen. Als sie einen Funkspruch von einer kleinen Gruppe Überlebender empfängt, muss sich die Besatzung entscheiden. Soll sie ihr eigenes Leben riskieren, um nach den Menschen zu suchen, oder auf der zumindest vorläufig sicheren Station bleiben und abwarten?
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/scouts.mp4">
 <img src="https://123.vitaforas.de/scouts.jpg" alt="26" width="100%" height="auto"></a>
 
