Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -174,6 +174,16 @@ Drei Astronauten starten zur 42. Mission auf den Mars, in zwei Jahren sollen sie
 <img src="https://123.vitaforas.de/ship.png" alt="26" width="100%" height="auto"></a>
 
 Ein internationaler Flottenverband aus fünf Kriegsschiffen führt gerade eine Übung im pazifischen Ozean durch. Admiral Shane erblickt während eines Manövers ein metallenes Gebilde, das sich bei näherer Betrachtung als außerirdisches Raumschiff entpuppt, das aus dem Wasser ragt. Die Militärs reagieren mit großer Neugier auf das unbekannte Objekt. Als sich die ersten Offiziere dem gewaltigen Raumschiff nähern, erwecken sie es zum Leben. Admiral Shane und sein Schwiegersohn in spe, Alex Hopper, gehen auf Angriffskurs und stellen sich den ungebetenen Gästen in die Quere. Doch die entfesselte Seeschlacht ist nur der Anfang. Denn die Aliens, "Regents" genannt, wollen eine gewaltige Energiequelle auf dem Meer errichten - und die Menschheit scheint ihnen dabei im Weg zu stehen...
+
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/mars.mp4">
+<img src="https://123.vitaforas.de/mars.jpg" alt="26" width="100%" height="auto"></a>
+
+
+Auf der Suche nach Spuren außerirdischen Lebens auf dem Mars befindet sich eine bunt zusammengewürfelte Crew in ihrer Basisstation und wartet auf das Versorgungsschiff Aurora, das sie wieder zur Erde zurückbringen soll. Soweit war die Mission nicht von Erfolg gekrönt, der Nachweis von Leben auf dem Mars negativ. Ausgerechnet kurz vor Ende des Forschungsauftrags macht eines der Crew-Mitglieder bei einem Alleingang in einem unterirdischen Höhlensystem eine folgenreiche Entdeckung: Er findet versteinerte Bakterien. Wie sich jedoch nach seiner Rückkehr herausstellt, sind die Mikroorganismen alles andere als tot. Eine Infektion breitet sich aus mit fatalen und letalen Folgen für die Crew. Verzweifelt versuchen die Überlebenden auszuharren, bis die Aurora eintrifft. Wenn es dann nicht schon zu spät ist…
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/mission.mp4">
