Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@ Auf der Suche nach Spuren außerirdischen Lebens auf dem Mars befindet sich eine
 
 
 Als eine mächtige Explosion den Kreml in Moskau erschüttert, stehen Agent Ethan Hunt (Tom Cruise) und seine Impossible Mission Force (IMF) plötzlich als Hauptverdächtige im Fokus. Und tatsächlich hat sich der Geheimagent mit seinem Partner Dunn (Simon Pegg) während des Anschlags im Kreml befunden, das Attentat aber nicht zu verantworten. Der Druck wird so groß, dass der US-Präsident das Phantom-Protokoll ausruft. Von nun an wird die Elitetruppe IMF verleugnet und muss im Untergrund nach den Hintermännern fanden. Ein Soziopath namens Cobolt (Michael Nyqvist) hat geheime Abschusscodes für russische Nuklearraketen erbeutet, Hunt will sie ihm abjagen, um einen Atomkrieg zu verhindern. Während die Fahndung nach Cobolt das IMF-Team mit Unterstützung des Innendienstlers William Brandt (Jeremy Renner) nach Dubai führt, droht das Attentat einen neuen Kalten Krieg zwischen den Supermächten USA und Russland zu verursachen und einen Kampf auszulösen.
+
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/apollo.mp4">
+<img src="https://123.vitaforas.de/apollo.jpg" alt="26" width="100%" height="auto"></a>
+
+Weniger als ein Jahr ist vergangen, seitdem der Mensch zum ersten Mal den Mond betreten hat. Und was die amerikanische Bevölkerung angeht, so stellt die Apollo-13-Mission lediglich einen erneuten Routineflug dar – bis die Bodenkontrollstation folgende Worte aus der unendlichen Weite des Alls empfängt: „Houston, wir haben ein Problem“. 205.000 Meilen von der Erde entfernt kämpfen die Astronauten Jim Lovell, Fred Haise und Jack Swigert in einer funktionsuntüchtigen Raumkapsel verzweifelt um ihr Leben. Unterdessen nehmen in der Bodenkontrollstation der Astronaut Ken Mattingly und Flugkommandant Gene Kranz das Rennen gegen die Zeit auf, um die Astronauten zurück zur Erde zu bringen.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/dive.mp4">
