Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@ Ein Tal in der Nordwestschweiz, 1872: Josephine (Clara Gostynski) arbeitet in ei
 
 
 Die gehörlose Maya Lopez (Alaqua Cox) ist dafür bekannt, stets tough zu sein zu, doch in ihrem Inneren sieht es ganz anders aus. Noch immer hat sie mit den Nachwirkungen ihres Rachefeldzugs gegen den brutalen Verbrechensbekämpfer Ronin (Jeremy Renner) zu kämpfen, bei welchem sie in New York für gehörig Chaos gesorgt hat. Die seelischen Wunden sitzen tief, denn der emotionale Ballast ihrer Vergangenheit lastet schwer auf ihren Schultern. Als Bandenchefin und Nachfolgerin von Wilson Fisk alias Kingpin muss sie sich für ihre rücksichtslosen Taten verantworten und alles dafür geben, sich den Schatten ihrer Vergangenheit zu stellen. Noch immer ringt sie mit ihrem kulturellen Erbe als amerikanische Ureinwohnerin, obwohl sie mehr denn je darauf angewiesen wäre, ihre inneren Dämonen endlich abzuschütteln. Noch ahnt sie nicht, dass noch viel größere Probleme auf sie zukommen werden …
+
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/club.mp4">
+<img src="https://123.vitaforas.de/club.jpg" alt="26" width="100%" height="auto"></a>
+
+Cady Heron (Angourie Rice) ist die Neue an der Schule und wird umgehend von einer elitären Gruppe beliebter Mädchen namens „The Plastics“, die von der hinterhältigen Bienenkönigin Regina George (Reneé Rapp) und ihren treuen Untergebenen Gretchen (Bebe Wood) und Karen (Avantika) regiert wird, an der Spitze der sozialen Highschool-Nahrungskette willkommen geheißen. Als Cady jedoch den großen Fehler begeht, sich in Reginas Ex-Freund Aaron Samuels (Christopher Briney) zu verlieben, gerät sie selbst in das Fadenkreuz der hochnäsigen, kaltherzigen und skrupellosen Clique. Während Cady mithilfe ihrer bereits verstoßenen Freunde Janis (Auli'i Cravalho) und Damian (Jaquel Spivey) versucht, die Spitzenprädatorin der Gruppe zur Strecke zu bringen, muss sie lernen, sich selbst treu zu bleiben, während sie sich dazu auch noch im halsabschneiderischsten Dschungel von allen zurechtfinden muss: der Highschool.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/green.mp4">
