Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@ Nach dem Tod seines alten Herren trifft Zeitungsverleger-Erbe und Playboy Britt 
 
 
 Die Grafschaft Donegal bekam einst von ihren eigenen Politikern den Beinamen „The Forgotten County“ verpasst – und ist ihn bis heute nicht mehr losgeworden. Ganz oben im westlichsten Zipfel von Irland liegt sie – und es passt wie die Faust aufs Auge, dass Robert Lorenz („Back In The Game“) sein fatalistisch-melancholisches Thriller-Drama genau hier angesiedelt hat: Schließlich fühlt sich „In The Land Of Saints And Sinners“ trotz des Settings im Jahre 1974 wie ein Western an – von den Protagonist*innen über das Setup bis hin zum finalen Shootout in der örtlichen Kneipe, nur dass die hier eben Pub und nicht Saloon genannt wird. Liam Neeson („Retribution“) verkörpert als Ex-Soldat und Auftragskiller den Archetypen des in die Jahre gekommenen Revolverhelden, der mit seiner verbliebenen Zeit noch etwas Sinnvolles anstellen will. Dabei gerät er mit einer Gruppe von Gangstern aneinander.
+
+
+ <p>         
+</p>         
+
+ <a href="https://123.vitaforas.de/meteor.mp4">
+<img src="https://123.vitaforas.de/meteor.jpg" alt="26" width="100%" height="auto"></a>
+
+US-Weltraumforscher Dr. Edwards (Anthony Jensen) entdeckt mit seinem Teleskop eines Tages einen verdächtigen Schatten auf der Oberfläche des Mondes. Es dauert nicht lange, da muss er entsetzt feststellen, dass dieses Phänomen durch einen riesigen Meteoriten hervorgerufen wird, der mit enormem Tempo auf die Erde zurast. Bei seinem Aufprall droht unser Planet komplett zerstört zu werden. Panisch alarmiert Edwards die Regierung in Washington, die General Ferris (Patrick Labyorteaux) beauftragt, die nötigen Maßnahmen zu unser aller Rettung einzuleiten. Doch nichts davon zeigt Wirkung, denn der Meteorit weicht einfach nicht von seinem Kurs ab. Da es nun zeitlich langsam eng wird, will die NASA ein Space Shuttle losschicken. Das soll auf dem Gefahrenherd landen, um ihn dann mittels gezielter Nuklear-Sprengungen zum Zerbröckeln zu bringen. Captain Mills (Karan Sagoo) und ihre Crew (Eva Ceja, Kennedy Porter, Maxi Witrak) sind die Auserwählten, die ihr Leben riskieren müssen, um den Untergang der Menschheit zu verhindern …
  <p>         
 </p>         
 
