Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,13 @@ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets 
 
 Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, Wut, Ekel und Traurigkeit leben im Kontrollzentrum von Rileys Verstand, von wo aus sie dem jungen Mädchen Ratschläge erteilen und ihr zur Seite stehen. Doch nach dem Umzug haben Riley und ihre Gefühle Probleme mit dem Leben in der fremden Stadt und es geht turbulent zu in der innerlichen Kommandozentrale ihrer Emotionen. 
 
+ <p>         
+</p>
+<a href="http://tv.vitaforas.de/ice5.mp4">
+<img src="http://tv.vitaforas.de/ice5.jpg" alt="1" width="100%" height="auto"></a>
 
+Ice Age 5 (2016)
+Noch immer ist Rattenhörnchen Scrat (Stimme im Original: Chris Wedge) mit seiner heiß geliebten Nuss beschäftigt. Doch dieses Mal setzen seine Missgeschicke eine Kette von Ereignissen in Gang, die sogar die ganze Welt bedrohen: Denn bei seinen Abenteuern stößt er zufällig auf ein UFO, das im Eis eingefroren war, bringt es zum Starten und schießt damit ins Weltall. Dort sorgt er dafür, dass nicht nur viele kleine Meteoriten auf die Erde stürzen, sondern auch ein riesengroßer droht, den gesamten blauen Planeten zu vernichten. Für das Mammut Manny (Ray Romano / deutsche Stimme: Thomas Nero Wolff), Faultier Sid (John Leguizamo / Otto Waalkes) und Säbelzahntiger Diego (Denis Leary / Thomas Fritsch) beginnt die aufregende Suche nach einer Möglichkeit, die Katastrophe abzuwenden. Dabei stehen ihnen viele alte und neue Kumpanen zur Seite. Bei der Absturzstelle eines Meteoriten, der vor langer Zeit schon auf der Erde aufprallte, machen sie dann eine erstaunliche Entdeckung…
  <p>         
 </p>
 <a href="http://tv.vitaforas.de/wish.mp4">
